# lowercase-hex

./: Cargo.toml  README.md
benches/bench/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lowercase_hex.rs
src/: buffer.rs  lib.rs  serde.rs  traits.rs
src/arch/: aarch64.rs  generic.rs  mod.rs  portable_simd.rs  wasm32.rs  x86.rs
tests/: test.rs
