[package]
name = "lowercase-hex"
version = "0.1.0"
authors = ["andunië <andunie@cassis.cash>"]
description = "Fast byte array to lowercase hex string conversion"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
categories = ["value-formatting", "no-std"]
keywords = ["hex", "bytes", "fmt", "lowercase"]
documentation = "https://docs.rs/lowercase-hex"
homepage = "https://github.com/andunieee/lowercase-hex"
repository = "https://github.com/andunieee/lowercase-hex"
exclude = [".github/", "benches/", "fuzz/", "tests/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1"
hex = { version = "~0.4.2", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

proptest = { version = "1.4", optional = true, default-features = false }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
faster-hex = { version = "0.10.0", default-features = false, features = [
    "alloc",
] }
hex = { version = "~0.4.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["hex?/std", "serde?/std", "proptest?/std", "alloc"]
alloc = ["hex?/alloc", "serde?/alloc", "proptest?/alloc"]

# Enables `core::error::Error` implementations always instead of conditionally through `std`.
# Requires Rust 1.81 or newer.
core-error = []

# Serde support. Use with `#[serde(with = "lowercase_hex")]`.
serde = ["hex?/serde", "dep:serde"]

# Use `hex`'s traits instead of our own.
# This should not be needed most of the time.
hex = ["dep:hex"]

# Forces generic implementation, overriding any specialized implementation (e.g. x86 or aarch64).
force-generic = []

# Support for the `portable-simd` nightly feature.
# Note that `-Zbuild-std` may be necessary to unlock better performance than
# the specialized implementations.
portable-simd = []

# Enables nightly-only features for better performance.
nightly = []

# Internal features.
__fuzzing = ["dep:proptest", "std"]
