[package]
name = "lowercase-hex-fuzz"
version = "0.0.0"
authors = ["andunië <andunie@cassis.cash>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
lowercase-hex = { path = "..", features = ["__fuzzing"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz_lowercase_hex"
path = "fuzz_targets/fuzz_lowercase_hex.rs"
test = false
doc = false

[features]
portable-simd = ["lowercase-hex/portable-simd"]
